Fixed Overflow Issue

--- a/style.css
+++ b/style.css
@@ -890,7 +890,7 @@
  .stories-section {
      padding: 80px 0;
      margin: 3%;
-
+     overflow-x: hidden;
  }
 
  .stories {
@@ -940,6 +940,7 @@
      box-shadow: var(--card-shadow);
      overflow: hidden;
      display: flex;
+     width: 280px;
      flex-direction: column;
      transition: transform 0.3s ease, box-shadow 0.3s ease;
  }
